@@ -27,6 +27,11 @@
 	exmpp_xml:attribute/2, exmpp_xml:element/{1,2,4} and
 	exmpp_xml:cdata/1.
 
+	* testsuite/jid.erl: Include internal/exmpp_xmpp.hrl.
+
+	* testsuite/xml_attributes.erl: Update to use the new
+	exmpp_xml:attribute/{2,3} functions.
+
 2009-01-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* include/exmpp_xmpp.hrl, include/internal/exmpp_xmpp.hrl,
